--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "preview": "cross-env NODE_ENV=production node server/app.js"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "express": "^4.19.2",
+    "google-translate-api": "^2.3.0",
     "sirv": "^2.0.4",
     "vue": "^3.4.23"
   },
@@ -21,6 +24,8 @@
     "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "cross-env": "^7.0.3",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
     "vue-tsc": "^2.0.14"
